// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsPoplist renders correctly 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-1ta1wie-TagContainer {
  margin-right: 0;
}

.cache-1a4majh-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-1e9s2z0-StyledBox-StyledTag {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
  margin-right: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt3"
      >
        <div
          class="cache-1ta1wie-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              scaleway
            </div>
          </div>
        </div>
      </div>
      +1
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt2"
      >
        <div
          as="span"
          class="eom2dbt0 cache-1e9s2z0-StyledBox-StyledTag e1vt8sjg2"
          role="status"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            cloud
          </div>
        </div>
      </div>
    </div>
     
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-3raeat-TagContainer {
  margin-right: 1;
}

.cache-1a4majh-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1ta1wie-TagContainer {
  margin-right: 0;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt3"
      >
        <div
          class="cache-3raeat-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              scaleway
            </div>
          </div>
        </div>
        <div
          class="cache-1ta1wie-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              cloud
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-3raeat-TagContainer {
  margin-right: 1;
}

.cache-1a4majh-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1ta1wie-TagContainer {
  margin-right: 0;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-1e9s2z0-StyledBox-StyledTag {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
  margin-right: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt3"
      >
        <div
          class="cache-3raeat-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              scaleway
            </div>
          </div>
        </div>
        <div
          class="cache-1ta1wie-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              cloud
            </div>
          </div>
        </div>
      </div>
      +1
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt2"
      >
        <div
          as="span"
          class="eom2dbt0 cache-1e9s2z0-StyledBox-StyledTag e1vt8sjg2"
          role="status"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            provider
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-55k8e4-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
}

.cache-1ta1wie-TagContainer {
  margin-right: 0;
}

.cache-1a4majh-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-1e9s2z0-StyledBox-StyledTag {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
  margin-right: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-55k8e4-StyledTagContainer eom2dbt3"
      >
        <div
          class="cache-1ta1wie-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              scaleway
            </div>
          </div>
        </div>
      </div>
      +2
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt2"
      >
        <div
          as="span"
          class="eom2dbt0 cache-1e9s2z0-StyledBox-StyledTag e1vt8sjg2"
          role="status"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            cloud
          </div>
        </div>
        <div
          as="span"
          class="eom2dbt0 cache-1e9s2z0-StyledBox-StyledTag e1vt8sjg2"
          role="status"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            provider
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with multiline 1`] = `
<DocumentFragment>
  .cache-tbwc3a-Child-StyledFlexBox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-v44dnh-StyledTagContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a4f62;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-v44dnh-StyledTagContainer>* {
  margin-bottom: 8px;
}

.cache-3raeat-TagContainer {
  margin-right: 1;
}

.cache-1a4majh-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
}

.cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 115px;
  white-space: nowrap;
}

.cache-1ta1wie-TagContainer {
  margin-right: 0;
}

.cache-1jveiaj-StyledManyTagsContainer {
  box-shadow: 0px 4px 32px 8px #D4DAE766;
  padding: 4px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 4px;
  max-width: 80vw;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.cache-1e9s2z0-StyledBox-StyledTag {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #4a4f62;
  background: #ffffff;
  border: solid 1px #e6e9f0;
  margin-right: 8px;
}

.cache-ezrk2s-StyledText-variantStyles-StyledTypography {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 12px;
  font-weight: 500;
  color: inherit;
}

<div>
    <div
      class="cache-tbwc3a-Child-StyledFlexBox e1l6meh00"
    >
      <div
        class="cache-v44dnh-StyledTagContainer eom2dbt3"
      >
        <div
          class="cache-3raeat-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              scaleway
            </div>
          </div>
        </div>
        <div
          class="cache-1ta1wie-TagContainer eom2dbt1"
        >
          <div
            as="span"
            class="cache-1a4majh-StyledBox e1vt8sjg2"
            role="status"
          >
            <div
              aria-disabled="false"
              class="e1vt8sjg1 e1g1zfwd0 cache-1pbmh0y-StyledText-variantStyles-StyledTypography-textStyle"
            >
              cloud
            </div>
          </div>
        </div>
      </div>
      +1
      <div
        class="cache-1jveiaj-StyledManyTagsContainer eom2dbt2"
      >
        <div
          as="span"
          class="eom2dbt0 cache-1e9s2z0-StyledBox-StyledTag e1vt8sjg2"
          role="status"
        >
          <div
            aria-disabled="false"
            class="e1vt8sjg1 e1g1zfwd0 cache-ezrk2s-StyledText-variantStyles-StyledTypography"
          >
            provider
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsPoplist renders correctly with not tags 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
